--- a/optigra-ads-rest-api/src/main/webapp/web-console/css/bootstrap.css
+++ b/optigra-ads-rest-api/src/main/webapp/web-console/css/bootstrap.css
@@ -4974,18 +4974,19 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #428bca;
+  border-color: #333;
 }
+
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #333;
+  border-color: #333;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #333;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #333;
 }
 .panel-success {
   border-color: #d6e9c6;
