--- a/optigra-ads-rest-api/src/main/webapp/web-console/script/framework/view/tpl/application/application-list.tpl.htm
+++ b/optigra-ads-rest-api/src/main/webapp/web-console/script/framework/view/tpl/application/application-list.tpl.htm
@@ -15,6 +15,22 @@
               </div>
               <div class="panel-body">
                <!-- Application list place -->
+              <div class="pagination-component">
+	              <select id="applicationPageSize" class="form-control" 
+	                  style="float: left; margin-top: 20px; margin-right: 20px; width: 75px;"
+	                  onchange="getContext().getApplicationController().getAll()"
+	              >
+					<option>10</option>
+					<option>25</option>
+					<option>50</option>
+					<option>100</option>
+				  </select>
+			  	<div id="applicationSearch" style="width: 300px;"></div>
+			  	<div id="applicationSearchParameters" style = "width: 250px">
+			  	Showing {{from}} to {{to}} of {{count}} entries
+			  	</div>
+              </div>
+              <br />
              <div class="table-responsive">
               <table class="table table-bordered table-hover table-striped tablesorter" style="width: 100%">
                 <thead>
@@ -33,7 +49,7 @@
 						<td style="width: 85px;"><input type="hidden" name="applicationId" value="{{applicationId}}" /> {{applicationId}}</td>
 						<td>{{name}}</td>
 						<td>{{status}}</td>
-						<td>{{url}}</td>
+						<td><a href="{{url}}" target="_blank">{{url}}</a></td>
 						<td>DO_DO</td>
 					</tr>
 					{{/each}}
