--- a/optigra-ads-rest-api/src/main/webapp/web-console/script/framework/view/tpl/application/application-list.tpl.htm
+++ b/optigra-ads-rest-api/src/main/webapp/web-console/script/framework/view/tpl/application/application-list.tpl.htm
@@ -15,21 +15,24 @@
               </div>
               <div class="panel-body">
                <!-- Application list place -->
-              <div class="pagination-component">
+              <div class="pagination-component" style="width: 100%;">
 	              <select id="applicationPageSize" class="form-control" 
-	                  style="float: left; margin-top: 20px; margin-right: 20px; width: 75px;"
-	                  onchange="getContext().getApplicationController().getAll()"
-	              >
+	                  style="float: left; width: 75px; margin-top: 20px; margin-right: 20px;"
+	                  onchange="getContext().getApplicationController().getAll()">
 					<option>10</option>
 					<option>25</option>
 					<option>50</option>
 					<option>100</option>
 				  </select>
-			  	<div id="applicationSearch" style="width: 300px;"></div>
-			  	<div id="applicationSearchParameters" style = "width: 250px">
+			  	<div id="applicationSearch" style="float: left; margin-right: 20px;"></div>
+			  	<div id="applicationSearchParameters" style = "float: left; margin-top: 27px; margin-right: 20px;">
 			  	Showing {{from}} to {{to}} of {{count}} entries
 			  	</div>
+              <button class="btn btn-primary" data-toggle="modal" data-target="#addApplicationModal" style="margin-top: 20px; margin-right: 20px;">
+				 <i class="fa fa-plus-square "></i> Add App
+			  </button>
               </div>
+              <div style="clear: both;"></div>
               <br />
              <div class="table-responsive">
               <table class="table table-bordered table-hover table-striped tablesorter" style="width: 100%">
@@ -50,7 +53,11 @@
 						<td>{{name}}</td>
 						<td>{{status}}</td>
 						<td><a href="{{url}}" target="_blank">{{url}}</a></td>
-						<td>DO_DO</td>
+						<td>
+						<a href="#showDetails"><i class="fa fa-external-link fa-3"></i></a>
+						<a href="#edit"><i class="fa fa-edit fa-3"></i></a>
+						<a href="#remove"><i class="fa fa-trash-o fa-3"></i></a>
+						</td>
 					</tr>
 					{{/each}}
 				</tbody>
@@ -62,3 +69,31 @@
             </div>
           </div>
         </div><!-- /.row -->
+
+        
+<!-- Modal -->
+<div class="modal fade" id="addApplicationModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add new application</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+                <label>Application name:</label>
+                <input id="applicationName" required="required" class="form-control" placeholder="Enter name">
+        </div>
+         <div class="form-group">
+                <label>URL:</label>
+                <input id="applicationUrl" required="required" class="form-control" placeholder="Enter url">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" onclick="getContext().getApplicationController().createApplication()">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
