--- a/optigra-ads-web-client/app/views/applications.html
+++ b/optigra-ads-web-client/app/views/applications.html
@@ -21,47 +21,11 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr class="active">
-                    <td>/index.html</td>
-                    <td>1265</td>
-                    <td>32.3%</td>
-                    <td>$321.33</td>
-                  </tr>
-                  <tr class="success">
-                    <td>/about.html</td>
-                    <td>261</td>
-                    <td>33.3%</td>
-                    <td>$234.12</td>
-                  </tr>
-                  <tr class="warning">
-                    <td>/sales.html</td>
-                    <td>665</td>
-                    <td>21.3%</td>
-                    <td>$16.34</td>
-                  </tr>
-                  <tr class="danger">
-                    <td>/blog.html</td>
-                    <td>9516</td>
-                    <td>89.3%</td>
-                    <td>$1644.43</td>
-                  </tr>
-                  <tr>
-                    <td>/404.html</td>
-                    <td>23</td>
-                    <td>34.3%</td>
-                    <td>$23.52</td>
-                  </tr>
-                  <tr>
-                    <td>/services.html</td>
-                    <td>421</td>
-                    <td>60.3%</td>
-                    <td>$724.32</td>
-                  </tr>
-                  <tr>
-                    <td>/blog/post.html</td>
-                    <td>1233</td>
-                    <td>93.2%</td>
-                    <td>$126.34</td>
+                  <tr ng-repeat="entity in applications.entities">
+                    <td>{{entity.id}}</td>
+                    <td>{{entity.name}}</td>
+                    <td>{{entity.url}}</td>
+                    <td>{{entity.status}}</td>
                   </tr>
                 </tbody>
               </table>
