Added device specific API

--- a/optigra-ads-rest-api/src/main/webapp/ui/templates/applications/applicationsListTemplate.html
+++ b/optigra-ads-rest-api/src/main/webapp/ui/templates/applications/applicationsListTemplate.html
@@ -18,6 +18,7 @@
       <ul class="lhs nav navbar-nav side-nav">
         <li id="mainlhs" class="menuitem"><a href="#home"><i class="fa fa-dashboard"></i> Dashboard</a></li>
         <li id="applicationlhs" class="menuitem active"><a href="#applications"><i class="fa fa-user"></i> Applications</a></li>
+        <li id="userslhs" class="menuitem"><a href="#users"><i class="fa fa-user"></i> Users</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right navbar-user">
