--- a/optigra-ads-rest-api/src/main/webapp/ui/templates/applications/applicationTemplate.html
+++ b/optigra-ads-rest-api/src/main/webapp/ui/templates/applications/applicationTemplate.html
@@ -36,8 +36,13 @@
   <div id="page-wrapper">
 	<div class="row">
 		<div class="col-md-8">
+	     	<legend><%= entity ? 'Edit' : 'New' %> Application</legend>
+				<div>
+				   <label>Application UID: </label> 
+				   <input class="form-control" name="applicationUID" type="text" readonly="readonly" value="<%= entity ? entity.get('applicationId') : '' %>">
+				</div>
+				
 			<form class="edit-application-form">
-				<legend><%= entity ? 'Edit' : 'New' %> Application</legend>
 				
 				<div>
 				   <label>Name</label> 
